# cursedmage

./: .gitignore  README.md  TODO.md  build.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  python-app.yml
CursedMage.egg-info/: PKG-INFO  SOURCES.txt
app/: constants.py  logging_config.py  main.py
app/assets/data/: bosses.json  cards.json  characters.json  effects.json  enemies.json
app/characters/: character.py  enemy.py
app/combat/: card.py  combat.py  cursedCard.py  cursed_card.py
app/combat/deck/: card.py  deck.py
app/engine/: button.py  config_manager.py  constants.py  save_manager.py
app/engine/components/: button.py  popup.py  slider.py
app/logic/: battle_manager.py  config_manager.py  save_manager.py
app/logic/combat/: effect.py  enemy_logic.py
app/menus/: card_pickup.py  character_selection.py  dungeon.py  main_menu.py  settings_menu.py  victory_screen.py
app/menus/components/: room.py
app/states/: card_pickup.py  character_selection.py  combat.py  cursed_card_pickup.py  dungeon.py  game_over.py  main_menu.py  score_screen.py  settings.py  settings_menu.py  state.py  tutorial.py  upgrade_card.py  victory_screen.py
app/states/components/: button.py  popup.py  room.py  slider.py
app/util/: run_once.py
client/: README.md  index.html  package.json
client/api/: leaderboard.json  package-lock.json  package.json  server.js
client/public/css/: style.css
client/public/js/: script.js
client/src/: App.jsx
client/src/components/: Blog.jsx  Member.jsx  (+2 more)
tests/: test_game.py
tests/app/: test_main.py
(+28 files in other folders)
