[tool.poetry]
name = "cursedmage"
version = "0.1.0"
description = ""
authors = [
    "Charlie Ensor <charlie.ensor@capgemini.com>",
    "James Hillyard <james.hillyard@payara.fish>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "**/*" }]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
pygame = "^2.4.0"
pytest = "^7.3.1"
pytest-repeat = "^0.9.1"
numpy = "^1.24.3"
pyinstaller = "^5.12.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"